# xfconf

./: .clang-format  .cppcheck-false-positives  .gcc-analyzer-false-positives  .gitignore  .gitlab-ci.yml  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
common/: Makefile.am  make-exo-alias.pl  meson.build  xfconf-common-private.h  xfconf-dbus.xml  xfconf-dbus.xml.in  xfconf-errors.c  xfconf-gdbus-bindings.c  xfconf-gdbus-bindings.h  xfconf-gvaluefuncs.c  xfconf-gvaluefuncs.h  xfconf-marshal.list  xfconf-types.c  xfconf-util.c  xfconf-util.h
completions/: Makefile.am  meson.build  xfconf-query
docs/: Makefile.am
docs/reference/: Makefile.am  meson.build  xfconf-backends.xml  xfconf-docs.sgml  xfconf-docs.xml  xfconf-docs.xml.in  xfconf-general.xml  xfconf-lockdown.xml  xfconf-sections.txt  xfconf.types
docs/reference/tmpl/: xfconf-backend.sgml  xfconf-binding.sgml  xfconf-channel.sgml  xfconf-errors.sgml  xfconf-gtk.sgml  xfconf-types.sgml  xfconf-unused.sgml  xfconf.sgml
docs/spec/: Makefile.am  backend.txt  general.txt  perchannel-xml.dtd  perchannel-xml.txt
docs/xfsettingsd/: Makefile.am  xfsettingsd-channels.txt
gsettings-backend/: Makefile.am  meson.build  xfconf-giomodule.c  xfconf-gsettings-backend.c  xfconf-gsettings-backend.h
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lo.po  lt.po  (+31 more)
tests/: Makefile.am  Makefile.inc  meson.build  t-get-properties.c  t-has-properties.c  t-property-changed-signal.c  t-remove-properties.c  t-set-properties.c  test-template.sh.in  tests-common.h  tests-driver.sh
tests/get-properties/: Makefile.am  t-get-arrayv.c  t-get-boolean.c  t-get-double.c  t-get-int.c  t-get-string.c  t-get-stringlist.c  t-get-uint64.c
tests/has-properties/: Makefile.am  t-has-arrayv.c  t-has-boolean.c  t-has-double.c  t-has-int.c  t-has-string.c  t-has-stringlist.c  t-has-uint64.c
tests/issues/: t-issue-16.c
tests/list-channels/: Makefile.am  t-list-channels.c
tests/object-bindings/: Makefile.am  t-object-bindings.c
tests/others/: Makefile.am  t-issue-16.c
tests/property-changed-signal/: Makefile.am  t-string-changed-signal-detailed.c  t-string-changed-signal.c  test-template.sh.in
tests/remove-properties/: Makefile.am  t-remove-boolean.c  t-remove-double.c  t-remove-int.c  t-remove-string.c  t-remove-stringlist.c  t-remove-uint64.c
tests/reset-properties/: Makefile.am  t-remove-arrayv.c  t-reset-arrayv.c  t-reset-boolean.c  t-reset-double.c  t-reset-int.c  t-reset-string.c  t-reset-stringlist.c  t-reset-uint64.c
tests/set-properties/: Makefile.am  t-set-arrayv.c  t-set-boolean.c  t-set-double.c  t-set-int.c  t-set-string.c  t-set-stringlist.c  t-set-uint64.c
tests/tests-end/: Makefile.am  t-tests-end.c
xfconf/: .clang-format  Makefile.am  abicheck.sh  libxfconf-0.deps  libxfconf-0.pc.in  libxfconf-1.pc.in  meson.build  xfconf-binding.c  xfconf-binding.h  xfconf-cache.c  xfconf-cache.h  xfconf-channel-cpp.cc  xfconf-channel.c  xfconf-channel.h  xfconf-errors.h  xfconf-private.h  xfconf-types.h  xfconf.c  xfconf.h  xfconf.symbols
xfconf-fuse/: Makefile.am  xfconf-fuse.c
xfconf-gtk/: Makefile.am  libxfconf-gtk-0.pc.in  xfconf-gtk.c  xfconf-gtk.h
xfconf-perl/: Makefile.PL  Makefile.PL.in  Makefile.am  Xfconf.pm  Xfconf.pm.in  copyright.pod  xfconfperl.h  xfconfperl.maps  xs_files
xfconf-perl/xs/: Makefile.am  Xfconf.xs  XfconfBinding.xs  XfconfChannel.xs
xfconf-query/: Makefile.am  main.c  meson.build
xfconfd/: Makefile.am  main.c  meson.build  org.xfce.Xfconf.service.in  xfconf-backend-factory.c  xfconf-backend-factory.h  xfconf-backend-perchannel-xml.c  xfconf-backend-perchannel-xml.h  xfconf-backend.c  xfconf-backend.h  xfconf-daemon.c  xfconf-daemon.h  xfconf-lifecycle-manager.c  xfconf-lifecycle-manager.h  xfconf-locking-utils.c  xfconf-locking-utils.h  xfconf-proptree.c  xfconf-proptree.h  xfconfd.service.in
xfsettingsd/: Makefile.am  accessx.c  main.c  registry.c  registry.h
